* Optimized the way new blocks are written to disk (verification should be faster now)
* Client: New TextUI command "purge", to purge unspendable records from UTXO-db
* New tool "fetchblock" and new functions in "lib/others/utils" for fetching raw blocks from the web
* UTXO index has now configurable length (via "lib/chain/UtxoIdxLen"), to address possible collision attacks (now set to 16 bytes)
* Client: Fixed "ConnectOnly" mode

1.8.1
* Client: each call to common.BlockChain.DeleteBranch() also does DelB2G() recursively
* WebUI: Added (switchable) sound notifications when a new block is mined
* Client: Support for new config value "WebUI.ServerMode" - many users to share the same node
* WebUI/Miners: Redone
* WebUI: When a block with a wallet's unspent tx is purged from blockchain.dat, the raw tx gets fetched from the web
* WebUI/Wallet: Fixed error "Form submission canceled because the form is not connected"
* Client: enable it to work with purged blockchain.new/blockchain.dat
* bdb: -purgeall to purge all the blocks from blockchain.new (delete blockchain.dat manually)
* Client: added some BU-singnalling related stats

1.8.0 - 2017-02-06
* Segregated Witness related functionality and many other changes here and there
* Client: drop_worst_peer - do not drop peers that send new transactions
* Client: Requires new consensus lib (from bitcon-core 0.13.1)
* Client: Added "-trust" switch, with which client should be as fast as downloader
* Downloader: replaced by "client -trust" and removed from the source base
* The concept of "dust" outputs has been removed. Only the fees are important.

1.7.4
* Lib: Fixed rejecting of too big blocks
* Client: Added TX_REJECTED_RBF_100 to the rejection reasons
* WebUI/Blocks: Show lowest fee's SPB in the recently processed blocks

1.7.3 - 2016-10-18
* Client: Properly handle new blocks comming from Cornell-Falcon-Network
* Client: Fixed excessive memory usage when synchronizing large amount of blocks