@@ -404,7 +404,11 @@ function import_file_selected(e) {
 <input type="button" id="delwal_button" value="Delete This Wallet" onclick="delete_wallet()">
 </span>
 </h2>
-Balance: <b id="total_btc"></b> BTC in <b id="unspent_outs"></b> outputs (<a href="javascript:get_balance_zip()">balance.zip</a>)<br>
+Balance: <b id="total_btc"></b> BTC in <b id="unspent_outs"></b> outputs (<a href="javascript:get_balance_zip()">balance.zip</a>)
+
+<i id="wallet_min_warning" style="color:purple;float:right;display:none" title="Modify MinValue in gocoin.conf to change it">
+Only accounting outputs with at least <b id="min_val_btc"></b> BTC</i>
+<br>
 <br>
 <div id="browser_wallets">Available wallets: </div>
 <br>
@@ -469,6 +473,10 @@ var _lblo = 0
 blno.addEventListener("lastblock", function(e) {
 	if (_lblo==0) {
 		_lblo = e.block.Height
+		if (e.block.MinValue>0) {
+			min_val_btc.innerText = val2str(e.block.MinValue)
+			wallet_min_warning.style.display = 'block'
+		}
 	} else if (!edit_in_progress && e.block.Height!=_lblo) {
 		location.reload()
 	}
