@@ -7,7 +7,10 @@
 * Client: New TextUI command "purge", to purge unspendable records from UTXO-db
 * New tool "fetchblock" and new functions in "lib/others/utils" for fetching raw blocks from the web
 * UTXO index has now configurable length (via "lib/chain/UtxoIdxLen"), to address possible collision attacks (now set to 16 bytes)
+* Block index increased to 16 bytes, to address possible collision attacks
 * Client: Fixed "ConnectOnly" mode
+* WebUI: Show MinValue for accounted outputs on "Wallet" and "MakeTx" tabs
+* Client: New config value FreeAtStart, to free all possible memory after initial loading of block chain
 
 1.8.1
 * Client: each call to common.BlockChain.DeleteBranch() also does DelB2G() recursively
